# auth-demo

./: .gitignore  docker-compose.yml
backend/: .gitignore  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0fb6a55d8a74_rename_user_and_account_class_by_indb_.py  192348557256_first_revision.py  54d047d3c467_initial_commit.py  5b3bad6a07b0_add_avatar_url.py  89886c359c34_use_python_uuid4_to_generate_uuid.py  8b911dfbf612_add_created_at.py  98631a05ced3_back_populates_accounts.py  b32f9fbef9f8_initial_revision.py  d03f955f64d9_add_server_default_for_uuid.py  d5826ba28549_change_to_hashed_password.py  f74b18dba735_import_schemas.py
backend/src/auth_demo_backend/: __init__.py  config.py  container.py
backend/src/auth_demo_backend/api/: app.py  auth.py  dependencies.py  middlewares.py
backend/src/auth_demo_backend/api/routers/: health.py
backend/src/auth_demo_backend/application/services/: auth_service.py
backend/src/auth_demo_backend/db/: models.py
backend/src/auth_demo_backend/domain/: errors.py
backend/src/auth_demo_backend/domain/entities/: __init__.py  account.py  entity.py  user.py
backend/src/auth_demo_backend/domain/models/: account_provider.py  configured_base_model.py  sign_in_data_base.py  user.py
backend/src/auth_demo_backend/domain/ports/: __init__.py  access_token_issuer.py  oauth_client.py  password_hasher.py
backend/src/auth_demo_backend/domain/repositories/: __init__.py  account_repository.py  (+2 more)
backend/src/auth_demo_backend/models/: __init__.py  email_password_sign_in_data.py  user.py
backend/src/auth_demo_backend/schemas/: __init__.py  account_provider.py  user_account.py
backend/src/auth_demo_backend/services/: __init__.py  auth.py  user.py
(+54 files in other folders)
