[project]
name = "auth-demo-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "isaac-fei", email = "isaac.omega.fei@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.3.0",
    "cryptography>=44.0.2",
    "fastapi[standard]>=0.115.12",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.2",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.1.0",
    "sqlmodel>=0.0.24",
]

[project.scripts]
auth-demo-backend = "auth_demo_backend:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "alembic>=1.15.2",
    "faker>=37.1.0",
    "ipykernel>=6.29.5",
]
