[project]
name = "auth-demo-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "isaac-fei", email = "isaac.omega.fei@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "authlib>=1.5.2",
    "bcrypt>=4.3.0",
    "cryptography>=44.0.2",
    "dependency-injector>=4.46.0",
    "fastapi[standard]>=0.115.12",
    "injector>=0.22.0",
    "itsdangerous>=2.2.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.2",
    "pydantic-settings>=2.8.1",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.0",
    "rich-toolkit==0.13.2",
    "sqlalchemy>=2.0.40",
]

[project.scripts]
auth-demo-backend = "auth_demo_backend:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "alembic>=1.15.2",
    "alembic-postgresql-enum>=1.7.0",
    "faker>=37.1.0",
    "ipykernel>=6.29.5",
]
